<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_activity_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaad.snpppapp.SignUp.SignUpActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="3dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="64dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/sign_up_name"
                android:hint="@string/sign_up_name_str"
                app:met_iconRight="@drawable/ic_person"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/sign_up_email"
                android:hint="@string/sign_up_email_str"
                app:met_iconRight="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/sign_up_password"
                android:hint="@string/sign_up_password_str"
                app:met_iconRight="@drawable/ic_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <Button
                android:id="@+id/sign_up_btn"
                android:text="@string/sign_up_btn_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <TextView
                android:id="@+id/sign_up_already_register_txt"
                android:text="@string/sign_up_already_register_txt_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"/>

            <ProgressBar
                android:id="@+id/sign_up_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
