<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_activity_layout"
    tools:context="com.example.shaad.snpppapp.Login.LoginActivity">


    <android.support.v7.widget.CardView
        android:id="@+id/login_upper_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_above="@+id/login_lower_card"
        app:cardCornerRadius="3dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/login_email"
                android:hint="@string/sign_up_email_str"
                app:met_iconRight="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/login_password"
                android:hint="@string/sign_up_password_str"
                app:met_iconRight="@drawable/ic_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <Button
                android:id="@+id/login_btn"
                android:text="@string/login_btn_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"/>

            <TextView
                android:id="@+id/login_forgot_password_txt"
                android:text="@string/login_forgot_password_txt_str"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"/>

            <ProgressBar
                android:id="@+id/login_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:padding="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login_lower_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="3dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/login_register_btn"
            android:text="@string/login_register_btn_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>

</RelativeLayout>
