<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shaad.snpppapp.EditProfile.EditProfileActivity">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/edit_profile_top_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="3dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="64dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp">

                    <Button
                        android:id="@+id/edit_select_picture"
                        android:text="@string/edit_select_picture_str"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="2dp"
                        android:layout_margin="2dp"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/edit_picture"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:padding="2dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginLeft="4dp" />
                    
                </LinearLayout>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_name"
                    android:hint="@string/sign_up_name_str"
                    app:met_iconRight="@drawable/ic_person"
                    android:inputType="textPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_email"
                    android:hint="@string/sign_up_email_str"
                    app:met_iconRight="@drawable/ic_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_password"
                    android:hint="@string/sign_up_password_str"
                    app:met_iconRight="@drawable/ic_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/edit_number"
                    android:hint="@string/edit_number_str"
                    app:met_iconRight="@drawable/ic_phone"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"/>

                <Button
                    android:id="@+id/edit_btn"
                    android:text="@string/edit_btn_str"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"/>

                <ProgressBar
                    android:id="@+id/edit_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:padding="2dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginBottom="12dp"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>


</RelativeLayout>
